@@ -742,6 +742,14 @@
         contentType: 'application/json',
         processData: false,
         success: function (data) {
+          if (data && data.error) {
+            if (data.errorNum && data.errorMessage) {
+              arangoHelper.arangoError(`Error ${data.errorNum}`, data.errorMessage);
+            } else {
+              arangoHelper.arangoError('Failure', 'Got unexpected server response: ' + JSON.stringify(data));
+            }
+            return;
+          }
           if (callback) {
             callback(false, data);
           }
@@ -762,6 +770,18 @@
         contentType: 'application/json',
         processData: false,
         success: function (data) {
+          if (data.result && data.result.length > 0) {
+            _.each(data.result, function (resp) {
+              if (resp.error) {
+                if (resp.errorNum && resp.errorMessage) {
+                  arangoHelper.arangoError(`Error ${resp.errorNum}`, resp.errorMessage);
+                } else {
+                  arangoHelper.arangoError('Failure', 'Got unexpected server response: ' + JSON.stringify(resp));
+                }
+                return;
+              }
+            });
+          }
           if (callback) {
             callback(false, data);
           }
